[package]
name = "iptool"
version = "0.1.0"
authors = ["Finn Behrens <fin@nyantec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
libc = "0.2"

pnet = { version = "0.28", optional = true }