[package]
name = "iptool"
version = "0.1.0"
authors = ["Finn Behrens <fin@nyantec.com>"]
edition = "2018"
repository = "https://github.com/nyantec/iptool"
license = "MirOS"
keywords = [ "linux", "network" ]
categories = [ "hardware-support" ]
description = "Rust linux iptool helpers for network interfaces"
homepage = "https://github.com/nyantec/iptool"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rtnetlink"]
rtnetlink = [ "neli", "nix", "log" ]

[dependencies]
libc = "0.2"

pnet = { version = "0.28", optional = true }
neli = { version = "0.5.3", optional = true }
nix = { version = "0.23.0", optional = true }
log = { version = "0.4.14", optional = true }

[dev-dependencies]
lazy_static = "1.4"