[package]
name = "iptool-sys"
version = "0.1.0"
authors = ["Finn Behrens <fin@nyantec.com>"]
edition = "2021"
repository = "https://github.com/nyantec/iptool"
license = "MirOS"
keywords = [ "linux", "network" ]
categories = [ "hardware-support" ]
description = "Rust linux iptool helpers for network interfaces"
homepage = "https://github.com/nyantec/iptool"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rtnetlink"]
rtnetlink = [ "neli", "neli-proc-macros", "nix", "log" ]

[dependencies]
libc = "0.2"

nix = { version = "0.23.0", optional = true }
log = { version = "0.4.14", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
neli = { version = "^0.6.1", optional = true }
#neli = { path = "../neli", optional = true }
#neli = { git = "https://github.com/nyantec/neli", branch = "nyantec-fixes", optional = true }
#neli = { git = "https://github.com/jbaublitz/neli", branch = "issue-158", optional = true}
neli-proc-macros = { version = "0.1", optional = true }


[dev-dependencies]
lazy_static = "1.4"
