[package]
name = "iptool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
links = [ "iptool-sys/rtnetlink" ]


[dependencies]
iptool-sys = { path = "../iptool-sys" }
libc = "0.2" # TODO: only linux?
nix = "0.23.1" # TODO: only unix?
